--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,6 +1,6 @@
 #Minecraft server properties
-#Fri Mar 21 02:30:23 UTC 2025
-allow-flight=false
+#Sat Mar 22 04:22:15 UTC 2025
+allow-flight=true
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
